--- a/eternal/css/main.css
+++ b/eternal/css/main.css
@@ -4,7 +4,9 @@
     max-width:1200px;
     margin:20px auto;
     position:relative;
-    /* display:flex; */
+    display:flex;
+    flex-direction: column;
+    row-gap:20px;
 }
 #calendarBox h3{padding-left:20px;cursor: pointer;}
 .calendarLeft{
@@ -52,9 +54,14 @@
     display:flex;
     width:100%;
     text-align: center;
+    padding:5px 0;
+    border-bottom:1px solid #aaa;
 }
-.detail_box .detail_list .detail_list_frame .fluctuate{
+.detail_box .detail_list .detail_list_frame .rednum{
     text-align: left;
+}
+.detail_box .detail_list .detail_list_frame .bluenum{
+    text-align: right;
 }
 
 .cldTable{
